--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,9 @@ body {
     border-radius: 0px 0px 25px 25px;
   }
   
-  .nav li {
-    padding: 10px 20px;
-  }
+  /* .nav li {
+    padding: 5px 5px;
+  } */
   
   .nav a {
     color: white;
@@ -132,7 +132,7 @@ body {
   .about p {
     line-height: 1.6;
   }
-  
+  /* }
   @media (max-width: 950px) {
     .hero-image img {
       display: none;
@@ -150,5 +150,86 @@ body {
     .hero-text h3{
       font-size: 1.5rem;
     }
+  } */
+  
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
+  
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  @media (max-width: 764px) {
+    .hero-image img {
+        display: none;
+    }
+    .hero-text {
+        max-width: 100%;
+        margin: 2rem;
+    }
+    .hero-text h2 {
+        font-size: 2rem;
+    }
+    .hero-text h3 {
+        font-size: 1.5rem;
+    }
+    .hero-text p {
+        font-size: 1rem;
+    }
+    .cta-button {
+      font-size: 0.8rem;
+    } 
+    .about{
+      margin-top: 4rem;
+    }
+    .about p {
+      font-size: 0.8rem;
+    }
+    .about h2 {
+      font-size: 1.5rem;
+    }
+  }
+  
+  @media (max-width: 360px) {
+    .about{
+      margin-top: 3rem;
+    }
+    .hero-title {
+      font-size: 3.5rem;
+    }
+    .hero-text h2 {
+      font-size: 1.5rem;
+    }
+    .hero-text h3 {
+      font-size: 1rem;
+    }
+    .hero-text p {
+      font-size: 0.8rem;
+    }
+    .about p {
+      font-size: 0.8rem;
+    }
+    .about h2 {
+      font-size: 1.5rem;
+    } 
+  }
+  
+  @media (max-width: 768px) {
+    .timeline-container {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .timeline-point {
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    .timeline-line {
+      display: none;
+    }
+  }
+ 
   
